correccion de tabs por spaces(4)

--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -95,12 +95,12 @@
                             </span><br>
                         {%- endif -%}
                         {%- if   book  -%}
-                        	{%- if p.LanguageCode_desc -%}
-                            	Idioma:
-                            	<span class="product-language">
-                                	{{- p.LanguageCode_desc.decode('utf-8') -}}
-                            	</span><br>
-                        	{%- endif -%}
+                            {%- if p.LanguageCode_desc -%}
+                                Idioma:
+                                <span class="product-language">
+                                    {{- p.LanguageCode_desc.decode('utf-8') -}}
+                                </span><br>
+                            {%- endif -%}
                         {%- endif -%}
                         {%- if p.ExtentValue -%}
                             P&aacute;ginas:
@@ -123,10 +123,10 @@
                         {%- if p.ProductAvailability == '21' -%}
                             <a href="javascript:APP.cartAdd({{ product_id }})" title="agregar al carrito"><img src="{{ url.images }}/imagenes/rediseno/imagenes/seccionTematika/b-comprar.png" alt="agregar al carrito"></a>
                         {%- else -%} 
-                        	{%- if p.ProductAvailability == '40' -%}
-                        		<img src="{{ url.images }}/imagenes/rediseno/imagenes/seccionTematika/b-noDisp.png" alt="No Disponible">
-                        	{%- else -%} {#- ProductAvailability == '22' -#}
-                            	<a href="javascript:if (confirm('Este producto no esta disponible actualmente. Desea hacer un pedido?'))document.location = '/PedidoEspecial?ID_ARTICULO={{ product_id }}';"><img src="{{ url.images}}/imagenes/rediseno/imagenes/seccionTematika/b-pedir.png" alt="Pedir"></a>
+                            {%- if p.ProductAvailability == '40' -%}
+                                <img src="{{ url.images }}/imagenes/rediseno/imagenes/seccionTematika/b-noDisp.png" alt="No Disponible" title="Actualmente este art&iacute;culo no puede ser solicitado como Pedido EspecialÓ>
+                            {%- else -%} {#- ProductAvailability == '22' -#}
+                                <a href="javascript:if (confirm('Este producto no esta disponible actualmente. Desea hacer un pedido?'))document.location = '/PedidoEspecial?ID_ARTICULO={{ product_id }}';"><img src="{{ url.images}}/imagenes/rediseno/imagenes/seccionTematika/b-pedir.png" alt="Pedir"></a>
                             {%- endif -%}
                         {%- endif -%}
                         </p>
