correccion tooltip NoDisponible

--- a/content/templates/macros/productPrice.html
+++ b/content/templates/macros/productPrice.html
@@ -33,7 +33,7 @@
             </a>
         {%- else -%}
             {%- if price_data.ProductAvailability == '40' -%}
-                <div class="dNoDisponibleButton" title="No Disponible"></div>
+                <div class="dNoDisponibleButton" alt="No Disponible" title="Actualmente este art&iacute;culo no puede ser solicitado como Pedido Especial"></div>
             {%- else -%}
                 <img style="padding-left: 20px; cursor: pointer;" onclick="javascript:if (confirm(\'Este producto no esta disponible actualmente. Desea hacer un pedido?\'))document.location = \'/PedidoEspecial?ID_ARTICULO={{ price_data.EntityId }}\';"    src="/imagenes/rediseno/imagenes/seccion{{ getSection(price_data.Categoria_Seccion) }}/b-pedir.png"    alt="Pedir" />
             {%- endif -%}
