--- a/content/templates/fragments/canvas_footer.html
+++ b/content/templates/fragments/canvas_footer.html
@@ -23,12 +23,10 @@
                         height="69" width="50"></a></td>
                 <td width="80%"><a href="/institucional/conozcanos.jsp">MARCAS</a>
                     | <a href="/sucursales">SUCURSALES</a> | <a
-                    href="/institucional/prensa.jsp?page=/asociadas/prensa/prensa1.htm">PRENSA</a>
-                    | <a
                     onclick="window.open('http://www.yenny-elateneo.com/index.php?idS=2');return false;"
                     href="#">EVENTOS</a> | <a
                     onclick="window.open('http://www.yenny-elateneo.com/#Ranking');return false;"
-                    href="#">RANKING</a> | <a href="/indice">MAPA DE PRODUCTOS</a> | <a
+                    href="#">RANKING</a> | <a
                     href="/institucional/servicios.jsp#preguntasfrecuentes">PREGUNTAS
                         FRECUENTES</a> | <a href="/empleos">EMPLEOS</a> | <a
                     href="mailto:librerias@tematika.com">CONTACTO</a> <br> <a
