bug fix reportado link pasatiempos a juguetes

--- a/content/templates/product/product.html
+++ b/content/templates/product/product.html
@@ -17,7 +17,7 @@
     {%- elif id == 5 -%}
         peliculas
     {%- elif id == 3 -%}
-        pasatiempos
+        juguetes
     {%- else -%}
         libros
     {%- endif -%}
