modificaciones en tiempos de entrega

--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -159,15 +159,14 @@
                                 + <a href="javascript:false;">
                             Tiempo de Env&iacute;o
                             <br><span>
-                            Capital Federal: {{ hs }} horas
+                            <b>Capital Federal:</b> de 2 a 4 d&iacute;as
                             h&aacute;biles.<br>
-                            GBA: {{ hs + 24 }} horas h&aacute;biles.<br>
-                            Interior del pa&iacute;s: {{ hs + 48 }} horas
-                            h&aacute;biles.<br>
-                            Resto del Mundo: var&iacute;a entre
-                            {{ hs + 24 }} a {{ hs + 48 }} horas
-                            h&aacute;biles dependiendo si se trata de una
-                            ciudad capital.<br>
+                            <b>Gran Buenos Aires:</b> de 3 a 5 d&iacute;as h&aacute;biles.<br>
+                            <b>Prov. Buenos Aires:</b> de 4 a 6 d&iacute;as h&aacute;biles.<br>
+                            <b>Resto del pa&iacute;s: </b> de 4 a 6 d&iacute;as h&aacute;biles.<br><br>
+                            <b>Resto del Mundo:</b> var&iacute;a entre
+                            3 y 6 d&iacute;as h&aacute;biles
+                            dependiendo del pa&iacute;s y la ciudad de destino.<br>
                             El horario de entrega para los pedidos dentro
                             de Argentina es de Lunes a Viernes de 9 a 18hs.
                             </span></a>
