modificacion de label mi cuenta

--- a/content/templates/page.html
+++ b/content/templates/page.html
@@ -55,7 +55,7 @@
                 <div class="hModUsuarioBack"></div>
                 <div class="hModUsuario">
                     <div class="hModUsrNombre" style="cursor: pointer"
-                        onclick="window.location.href='/miCuenta/modificarSocio.jsp';">Mi
+                        onclick="window.location.href='/miCuenta/modificarSocio.jsp';">Ingresar a mi
                         Cuenta</div>
                     <a id="divSalir" style="visibility: hidden;" class="hModUsrCerrar"
                         href="/TerminarSesion" title="Salir">salir</a>
