agregado de datos al footer

--- a/content/templates/fragments/canvas_footer.html
+++ b/content/templates/fragments/canvas_footer.html
@@ -38,6 +38,13 @@
                         Y COSTOS DE ENV&Iacute;O</a></td>
                 <td width="10%">&nbsp;</td>
             </tr>
+            <tr>
+                <td width="100%" colspan="3">
+                    <div style="text-align: center;"><span style="color: #330099;">GRUPO ILHSA S.A.</span>
+                        Patagones 2463 (C1282ACA) C.A.B.A. - Tel.: (011) 4943-8200 / 0810 33 EXTRA (39872) - CUIT: 30-65438619-2
+                    </div>
+                </td>
+            </tr>
         </table>
     </div>
 </div>
