cambio MARCAS por QUIENES SOMOS

--- a/content/templates/fragments/canvas_footer.html
+++ b/content/templates/fragments/canvas_footer.html
@@ -21,7 +21,7 @@
                     target="_F960AFIPInfo"> <img
                         src="http://www.afip.gob.ar/images/f960/DATAWEB.jpg" border="0"
                         height="69" width="50"></a></td>
-                <td width="80%"><a href="/institucional/conozcanos.jsp">MARCAS</a>
+                <td width="80%"><a href="/institucional/conozcanos.jsp">QUIENES SOMOS</a>
                     | <a href="/sucursales">SUCURSALES</a> | <a
                     onclick="window.open('http://www.yenny-elateneo.com/index.php?idS=2');return false;"
                     href="#">EVENTOS</a> | <a
